# afLib-linux

./: CMakeLists.txt  README.md
examples/afBlink/: CMakeLists.txt  afBlink.c
examples/af_logger_demo/: CMakeLists.txt  af_logger_demo.c
examples/full_api_example/: CMakeLists.txt  attribute_db.cpp  debugprints.cpp  full_api_example.cpp
examples/generic_mcu/: CMakeLists.txt  generic_mcu.c
